--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity">
+        <activity android:name=".activity.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,7 +18,8 @@
 
             </intent-filter>
         </activity>
-        <activity android:name=".RehberActivity"/>
+        <activity android:name=".activity.RehberActivity"/>
+        <activity android:name=".activity.IcerikActivity"/>
     </application>
 
 </manifest>
